src/tests/snapshots/gitu__tests__stage__stage_added_line.snap
---
source: src/tests/stage.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   firstfile                                                           |
 @@ -1,3 +1,2 @@                                                                |
 -testing                                                                       |
▌-testtest                                                                      |
  weehooo                                                                       |
 +blrergh                                                                       |
                                                                                |
 Staged changes (1)                                                             |
 modified   firstfile                                                           |
 @@ -1,2 +1,3 @@                                                                |
  testing                                                                       |
  testtest                                                                      |
 +weehooo                                                                       |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --cached --recount                                                  |
styles_hash: ab9fd97bf343786b
