src/tests/snapshots/gitu__tests__stage__stage_all_unstaged.snap
---
source: src/tests/stage.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 2 commit(s).                          |
                                                                                |
▌Staged changes (2)                                                             |
▌modified   firstfile…                                                          |
▌modified   secondfile…                                                         |
                                                                                |
 Recent commits                                                                 |
 0c2c6c3 main add secondfile                                     Author Name __ |
 223428c add firstfile                                           Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git add -u .                                                                  |
styles_hash: f568615a9a389abe
