src/tests/snapshots/gitu__tests__stage__stage_all_untracked.snap
---
source: src/tests/stage.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is up to date with 'origin/main'.                                  |
                                                                                |
▌Staged changes (2)                                                             |
▌added      file-a                                                              |
▌added      file-b                                                              |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git add file-a file-b                                                         |
styles_hash: 3a1c73d40e0d57d0
