src/tests/snapshots/gitu__tests__stage__stage_changes_crlf.snap
---
source: src/tests/stage.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Unstaged changes (1)                                                           |
▌modified   testfile                                                            |
▌@@ -1,2 +1,2 @@                                                                |
▌-testing                                                                       |
▌+test                                                                          |
▌ testtest                                                                      |
                                                                                |
 Recent commits                                                                 |
 bbe772c main add testfile                                       Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 38f74dd9f21937ad
