src/tests/snapshots/gitu__tests__stage__stage_removed_line.snap
---
source: src/tests/stage.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   firstfile                                                           |
 @@ -1 +1,2 @@                                                                  |
▌-testtest                                                                      |
 +weehooo                                                                       |
 +blrergh                                                                       |
                                                                                |
 Staged changes (1)                                                             |
 modified   firstfile                                                           |
 @@ -1,2 +1 @@                                                                  |
 -testing                                                                       |
  testtest                                                                      |
                                                                                |
 Recent commits                                                                 |
 223428c main add firstfile                                                     |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --cached --recount                                                  |
styles_hash: 8f07bb5498255060
